# PolyG-LSL

./: .gitignore  CLAUDE.md  C_controller.py  config.py  pick_coords.py  readme.md  requirements.txt  scenario.yaml
PolyG_DLL_API/: ACQPLOTDLL.H  BUILD_ko.md  BridgeConfig.h  DlgSetPgaSrcGroup.cpp  DlgSetPgaSrcGroup.h  MainFrm.cpp  MainFrm.h  ReadMe.txt  StdAfx.cpp  StdAfx.h  Test_LXSM_D1WD10.dsw  Test_LXSM_D1WD10.sln  Test_LXSM_D1WD10.vcxproj  Test_LXSM_D1WD10.vcxproj.filters  Test_LXSM_D1WD10Doc.cpp  Test_LXSM_D1WD10Doc.h
Test_LXSM_D1WD10_VC2017/: BUILD_ko.md  LXSM-D1WD10.h  Test_LXSM_D1WD10.cpp  Test_LXSM_D1WD10.dsp  Test_LXSM_D1WD10.h  Test_LXSM_D1WD10.rc  Test_LXSM_D1WD10View.cpp  Test_LXSM_D1WD10View.h  resource.h
docs/: cpp-acquisition-app.md  index.md  network-and-streams.md  polyg-lsl-bridge.md  protocols-and-formats.md  three-pc-automation.md
legacy/: A_eeg_client.py  B_slide_client.py
polyg-lsl-bridge/: .gitignore  README.md  config.toml  pyproject.toml
polyg-lsl-bridge/cpp/: Forwarder.cpp  Forwarder.h  README.md
polyg-lsl-bridge/docs/: api-reference.md  index.md  testing.md
polyg-lsl-bridge/docs/superpowers/plans/: 2026-06-02-eeg-lsl-bridge.md
polyg-lsl-bridge/docs/superpowers/specs/: 2026-06-02-eeg-lsl-bridge-design.md
polyg-lsl-bridge/examples/: example_scenario.py
polyg-lsl-bridge/src/polyg_lsl/: __init__.py  bridge.py  config.py  fake_device.py  markers.py  protocol.py  scaling.py
polyg-lsl-bridge/tests/: test_bridge.py  test_config.py  test_end_to_end.py  test_integration_lsl.py  test_markers.py  test_protocol.py  test_scaling.py
(+12 files in other folders)
